--- a/Speller/Base.lproj/Main.storyboard
+++ b/Speller/Base.lproj/Main.storyboard
@@ -66,15 +66,18 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6rv-AZ-U12">
-                                <rect key="frame" x="0.0" y="696" width="375" height="44"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <state key="normal" title="New Word"/>
+                                <rect key="frame" x="9.3333333333333428" y="693" width="356.33333333333326" height="47"/>
+                                <color key="backgroundColor" red="0.4805490154109589" green="1" blue="0.097977311643835621" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="30"/>
+                                <state key="normal" title="New Word">
+                                    <color key="titleColor" red="0.0" green="0.42206468810773878" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="newWordButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="rgj-82-NgL"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="r61-xX-u5f" userLabel="Definition Stack View">
-                                <rect key="frame" x="0.0" y="635.66666666666663" width="375" height="52.333333333333371"/>
+                                <rect key="frame" x="0.0" y="632.66666666666663" width="375" height="52.333333333333371"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Definition" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nWD-hH-5JR">
                                         <rect key="frame" x="145.66666666666666" y="0.0" width="83.666666666666657" height="24"/>
@@ -117,16 +120,28 @@
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e56-Du-1rj">
                                                 <rect key="frame" x="0.0" y="0.0" width="337.66666666666669" height="36"/>
+                                                <color key="backgroundColor" red="1" green="1" blue="0.47570633559999997" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                                <state key="normal" title="Hear Word"/>
+                                                <state key="normal" title="Hear Word">
+                                                    <color key="titleColor" red="0.90317315924657537" green="0.50882373925597624" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <state key="disabled">
+                                                    <color key="titleColor" red="1" green="0.82026139187486202" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="hearWordButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="HXx-yC-dEL"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wSU-Ba-Bie">
                                                 <rect key="frame" x="0.0" y="44" width="337.66666666666669" height="36"/>
+                                                <color key="backgroundColor" red="1" green="1" blue="0.47570633559999997" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                                <state key="normal" title="Part of Speech"/>
+                                                <state key="normal" title="Part of Speech">
+                                                    <color key="titleColor" red="0.90317315919999996" green="0.50882373930000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <state key="disabled">
+                                                    <color key="titleColor" red="1" green="0.82026139190000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="partOfSpeechButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="8jo-T9-zCa"/>
                                                 </connections>
@@ -138,16 +153,28 @@
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q7y-kg-HdR">
                                                 <rect key="frame" x="0.0" y="0.0" width="337.66666666666669" height="36"/>
+                                                <color key="backgroundColor" red="1" green="1" blue="0.47570633559999997" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                                <state key="normal" title="Definition"/>
+                                                <state key="normal" title="Definition">
+                                                    <color key="titleColor" red="0.90317315919999996" green="0.50882373930000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <state key="disabled">
+                                                    <color key="titleColor" red="1" green="0.82026139190000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="definitionPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="q3R-wF-8DQ"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nt9-hr-ANi">
                                                 <rect key="frame" x="0.0" y="44" width="337.66666666666669" height="36"/>
+                                                <color key="backgroundColor" red="1" green="1" blue="0.47570633559999997" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                                <state key="normal" title="Origin"/>
+                                                <state key="normal" title="Origin">
+                                                    <color key="titleColor" red="0.90317315919999996" green="0.50882373930000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <state key="disabled">
+                                                    <color key="titleColor" red="1" green="0.82026139190000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="originPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="IId-qr-LWG"/>
                                                 </connections>
@@ -158,7 +185,7 @@
                                 <variation key="heightClass=compact" axis="horizontal"/>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.71291978228582098" green="0.82282988502554699" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="6rv-AZ-U12" firstAttribute="top" secondItem="r61-xX-u5f" secondAttribute="bottom" constant="8" symbolic="YES" id="0Hl-V3-cI6"/>
                             <constraint firstItem="r61-xX-u5f" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gio-MI-vZ1" secondAttribute="bottom" constant="8" symbolic="YES" id="2g0-vs-5q0"/>
@@ -171,9 +198,9 @@
                             <constraint firstItem="r61-xX-u5f" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dw2-uj-txE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cSD-9C-UBt" secondAttribute="trailing" id="FPM-Yh-ufb"/>
                             <constraint firstItem="cSD-9C-UBt" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="GAG-Mf-ePx"/>
+                            <constraint firstItem="6rv-AZ-U12" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.95" id="K5x-1H-NCb"/>
                             <constraint firstItem="cSD-9C-UBt" firstAttribute="top" relation="greaterThanOrEqual" secondItem="VBj-wu-uQE" secondAttribute="bottom" constant="8" symbolic="YES" id="K9w-Xs-5IS"/>
                             <constraint firstItem="VBj-wu-uQE" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.9" id="Mls-Ym-97e"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6rv-AZ-U12" secondAttribute="trailing" id="NkI-0n-UHD"/>
                             <constraint firstItem="gio-MI-vZ1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OHL-m4-PD0"/>
                             <constraint firstItem="VBj-wu-uQE" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="OgJ-b8-lQ0"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="2bT-r6-Qh9" secondAttribute="bottom" id="UWh-nI-cMx"/>
@@ -188,13 +215,13 @@
                                 <variation key="heightClass=compact" constant="0.0"/>
                             </constraint>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r61-xX-u5f" secondAttribute="trailing" id="s22-LB-EpX"/>
+                            <constraint firstItem="6rv-AZ-U12" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="sD2-yb-NjV"/>
                             <constraint firstItem="VBj-wu-uQE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="tBq-h7-ECJ">
                                 <variation key="heightClass=compact" constant="0.0"/>
                             </constraint>
                             <constraint firstItem="cSD-9C-UBt" firstAttribute="top" secondItem="VBj-wu-uQE" secondAttribute="bottom" constant="95.666666666666657" id="x6f-UY-LNU">
                                 <variation key="heightClass=compact" constant="8" symbolic="YES"/>
                             </constraint>
-                            <constraint firstItem="6rv-AZ-U12" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xtB-iI-Qy1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <variation key="default">
